--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <!-- Unordered list to structure navigation items -->
                 <ul>
                     <!-- List item for 'About' link -->
-                    <li><a href="#hero" class="nav-link">About</a></li>
+                    <li><a href="#about" class="nav-link">About</a></li>
                     <!-- List item for 'Skills' link -->
                     <li><a href="#skills" class="nav-link">Skills</a></li>
                     <!-- List item for 'Projects' link -->
@@ -75,7 +75,7 @@
     <main>
 
         <!-- Section for the Hero/Introduction area -->
-        <section id="hero" class="hero-section">
+        <section id="about" class="hero-section">
             <div class="container hero-container">
                 <!-- Text content wrapper for the Hero section -->
                 <div class="hero-text">
