--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Professional Portfolio of a Full Stack Developer and UI/UX Designer.">
+    <meta name="description" content="Professional Portfolio of a Frontend Developer and UI Designer.">
     <title>Sridhar Yadav | Portfolio</title>
 
     <!-- Links the Google Fonts stylesheet for 'Outfit' and 'Inter' fonts -->
