--- a/index.html
+++ b/index.html
@@ -101,13 +101,10 @@
                     <div class="visual-circle"></div>
                     <div class="visual-glass-card">
                         <!-- Pseudo-code representation graphic -->
-                        <div class="code-snippet">
-                            <span class="code-line">const portfolio = {</span>
-                            <span class="code-line indent"> owner: "You",</span>
-                            <span class="code-line indent"> skills: ["Design", "Code"],</span>
-                            <span class="code-line">};</span>
+                        <div class ="image-placeholder">
+                            <!-- Placeholder for user image, generated via CSS/Divs for now -->
+                             <img src="Me.jpeg" alt="Sridhar Yadav" class="profile-image"/>
                         </div>
-                    </div>
                 </div>
             </div>
         </section>
@@ -153,10 +150,10 @@
                         <p>Python, SQL, MongoDB</p>
                     </div>
                     <!-- Skill Item: Design -->
-                    <div class="skill-card">
+                    <!--<div class="skill-card">
                         <h3>Design</h3>
                         <p>Figma, UI/UX Principles</p>
-                    </div>
+                    </div> -->
                     <!-- Skill Item: AI,ML 
                     <div class="skill-card">
                         <h3>AI,ML</h3>
@@ -225,13 +222,13 @@
                         <a href="https://www.udemy.com/certificate/UC-278f1f36-57e4-42ca-8a64-73f995352c08/?utm_campaign=email&utm_medium=email&utm_source=sendgrid.com"
                             class="btn btn-secondary">View Credential</a>
                     </div>
-                    <div class="project-card">
+                    <!-- <div class="project-card">
                         <h3>Figma Course</h3>
                         <p>Principles of user interface design, wireframing, and prototyping.</p>
                         <p><b>Udemy</b></p>
                         <a href="https://www.udemy.com/certificate/UC-58691d29-5a76-48bd-b4b2-5f69b19a381f/?utm_campaign=email&utm_medium=email&utm_source=sendgrid.com"
                             class="btn btn-secondary">View Credential</a>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </section>
